# multivariate-view

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/widget/: app.py
multivariate_view/app/: app.py  io.py  main.py  volume_view.py
multivariate_view/app/assets/: __init__.py
multivariate_view/app/compute/: __init__.py  gbc.py  hsl.py
multivariate_view/module/: __init__.py
multivariate_view/widgets/: radvolviz.py
test/: conftest.py  test_bin.py  test_colors.py  test_gbc.py
test/test_output/: bins1.npz  bins2.npz  bins3.npz  gbc1.npz  gbc2.npz  gbc3.npz
trame_radvolviz/app/: app.py  io.py  main.py  volume_view.py
trame_radvolviz/app/compute/: __init__.py  bin.py  gbc.py  hsl.py
trame_radvolviz/module/: __init__.py
trame_radvolviz/module/serve/: trame_radvolviz.umd.js
trame_radvolviz/widgets/: radvolviz.py
vue-components/: index.html  package-lock.json  package.json  vite.config.js
vue-components/src/: test.js
vue-components/src/components/: NdColorMap.js  index.js
vue-components/src/utils/: colors.js  compute.js
